@@ -1,3 +1,7 @@
+2004-05-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b104
+
+	* Change: Enable optional syslog reporting for login/out
+
 2004-05-10  Alan Harder <alan.harder@sun.com>  1.4.4-cvs-b103
 
 	* Regenerate highlights as needed when moving albums around.
